access wallet using mnemonic
